# vader-docs

./: .gitignore  Dockerfile  README.rst  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
source/: backend.rst  conf.py  docs.rst  frontend.rst  index.rst  tools.rst
source/_templates/: hello.html
source/backend/: 01-summary.rst  _backend.rst
source/dance/: 01-overview.rst  _dance.rst
source/docs/: 01-summary.rst  02-server-side.rst  _docs.rst
source/frontend/: 01-summary.rst  _frontend.rst
source/tools/: _tools.rst  black.rst  docker.rst  fastapi.rst  git_hooks.rst  github_webhooks.rst  mypy.rst  nginx.rst  pipm.rst  poetry.rst  sphinx.rst  uvicorn.rst
tests/: test_vader_docs.py
